--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,14 @@ body {
   margin-top: auto;
 } */
 
-h1{
-  font-size: 25px;
-  line-height: 1.5;
-  /* color: green; */
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  /* font-weight: bold; */
+  line-height: 1.2;
+  color: white;
+  text-align: center;
+  /* margin: 2rem 0; */
 }
 
 .badge {
