--- a/src/styles.css
+++ b/src/styles.css
@@ -126,6 +126,25 @@ ul li {
   padding: 8px 0;
 }
 
+.hover-zoom:hover {
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.hover-title {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.8s;
+}
+
+.hover-zoom:hover ~ .hover-title {
+  opacity: 1;
+}
+
+
+
 @media (max-width: 767px) {
   ul {
     font-size: 14px;
