--- a/src/styles.css
+++ b/src/styles.css
@@ -154,3 +154,19 @@ ul li {
     padding: 6px 0;
   }
 }
+
+.category-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+}
+
+.category-item {
+  margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .category-container {
+    grid-template-columns: 1fr;
+  }
+}
